# qplane

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .qmllint.ini  CMakeLists.txt  LICENSE  README.md  babel.config.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  vcpkg.json
configs/cmake/: tests.cmake  transpilation.cmake
scripts/: install-tools.sh
src/: consts.h  main.cpp  qmlconsts.cpp  qmlconsts.h
src/components/: CameraController.qml  EditWindowBase.qml  EntityActorEditWindow.qml  EntityModelEditWindow.qml  EntityModelItem.qml  FormCheckBoxInput.qml  FormTextInput.qml  HeightControl.qml  Highlight.qml  IconButton.qml  Layers.qml  LazyEditWindow.qml  LazyWindow.qml  LevelSettings.qml  LevelsEditWindow.qml  MainMenuItem.qml  ModelItem.qml  OpacityHover.qml  PropertiesControl.qml  RosterEntityActors.qml  RosterEntityModels.qml  RosterEntityParticles.qml  RosterEntityWeapons.qml  SceneGhost.qml  SceneItem.qml  SceneListEntry.qml  TextTexture.qml  ThemeEditWindow.qml
src/components/form/: BlockableTextInput.qml  FormAcceptButtonsGroup.qml  FormCheckBoxInput.qml  FormColorInput.qml  FormComboBoxInput.qml  FormFilesComboBoxInput.qml  FormInfoLabel.qml  FormNullableNumberInput.qml  FormNullableTextInput.qml  FormNumberInput.qml  FormTextInput.qml  FormVector3DInput.qml  FormVelocityInput.qml  InputErrorMessage.qml
src/components/icons/: BaseIconShape.qml  DownIcon.qml  UpIcon.qml
src/components/rosters/: CrudSignals.qml  RosterBase.qml  RosterContextMenu.qml  RosterEntityActors.qml  RosterEntityDirectionalLights.qml  RosterEntityModels.qml  RosterEntityParticles.qml  RosterEntityTexts.qml  RosterEntityWeapons.qml  RosterLabel.qml  RosterLayers.qml  RosterTitle.qml
src/components/scene/: SceneItem.qml  SceneItemsInstanceList.qml  SceneLayers.qml  SceneTextItem.qml
src/components/windows/: EditWindowBase.qml  EntityActorEditWindow.qml  EntityDirectionalLightEditWindow.qml  EntityModelEditWindow.qml  EntityParticlesEditWindow.qml  EntityTextEditWindow.qml  EntityWeaponEditWindow.qml  LayerEditWindow.qml  LazyEditWindow.qml  LazyWindow.qml  LevelGlobalLight.qml  LevelSettingsWindow.qml  LevelsEditWindow.qml  ThemeEditWindow.qml  utils.mjs
src/jsutils/: formValidator.mts  utils.mjs  utils.mts
src/jsutils/formValidator/: ColorValidator.mts  NullValidator.mts  NumberValidator.mts  ObjectValidator.mts  OrValidator.mts  StringValidator.mts  Validator.mts  ValidatorResult.mts  Vector3DValidator.mts  common.mts
src/jsutils/utils/: common.mts  functional.mts  math.mts  qt.mts
src/mainwindow/: MainWindow.qml  mainwindow.h  mainwindow.ui
src/models/: appstate.cpp  appstate.h  baselist.h  clipboard.cpp  clipboard.h  fileio.cpp  fileio.h  gadgetlistmodel.cpp  gadgetlistmodel.h  modelentitystate.cpp  modelentitystate.h  modelsstate.cpp  modelsstate.h  projectstructure.cpp  projectstructure.h  recursivedirectorylistmodel.cpp  recursivedirectorylistmodel.h  savehandler.cpp  savehandler.h  theme.cpp  theme.h  transformmodel.cpp  transformmodel.h  translations.cpp  translations.h  uuidgenerator.cpp  uuidgenerator.h
src/models/actionmanager/: actionmanager.cpp  actionmanager.h  actionmanageritem.cpp  actionmanageritem.h
src/models/gadgetlistmodel/: gadgetlistmodel.cpp  gadgetlistmodel.h  gadgetlistmodel.test.cpp
src/qmlutils/: QmlUtils.qml
src/tstypes/: color.d.ts  global.d.ts  qt_global_object.d.ts  qt_signal.d.ts  vectors.d.ts
src/types/: entityactor.cpp  entityactor.h  entitybase.cpp  entitybase.d.ts  entitybase.h  entityboundaries.cpp  entityboundaries.h  entitycamera.cpp  entitycamera.h  entitydirectionallight.cpp  entitydirectionallight.h  entitymodel.cpp  entitymodel.h  entityparticles.cpp  entityparticles.h  entitypropvelocity.cpp  entitypropvelocity.h  entitytext.cpp  entitytext.h  entityweapon.cpp  entityweapon.h  levellayer.cpp  levellayer.h  levelmeta.cpp  levelmeta.h  placement.cpp  placement.h  positionstrategymany.cpp  positionstrategymany.h  positionstrategysingle.cpp  positionstrategysingle.h  positionstrategyvoid.cpp  positionstrategyvoid.h
src/utils/: json.cpp  json.h  jsonvalidator.cpp  jsonvalidator.h  jssetter.cpp  jssetter.h  utils.h
